1、新增Blog与分页的相关对象;2、新增对个人博客标题的显示输出;3、先完成功能对跨域问题暂时不做任何操作;

--- a/AleBlog.Web/Views/Shared/_Layout.cshtml
+++ b/AleBlog.Web/Views/Shared/_Layout.cshtml
@@ -3,46 +3,71 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AleBlog.Web</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <title>@ViewData["Title"] - AleBlog</title>
+     <style>
+         html {
+             font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+         }
+
+         a {
+             color: #000000;
+             text-decoration: none;
+         }
+
+             a:hover {
+                 color: #919191;
+                 transition: color .2s ease,border-color .2s ease,background .2s ease,opacity .2s ease;
+                 text-decoration: none;
+             }
+
+         .navbar {
+             height: 4rem;
+             line-height: 4rem;
+             width: 100%;
+         }
+         .navbar .container{
+             width:auto;
+             max-width:1080px;
+             text-align:center;
+             margin:0 auto;
+             display:flex;
+             justify-content:space-between;
+         }
+         .navbar-header a:hover,
+         .navbar .menu a:hover {
+             background-color: transparent;
+         }
+
+         .page-blank{
+             width:100%;
+             max-width:900px;
+             margin:0 auto;
+             padding-top:2rem;
+         }
+         .article-item-createdt {
+             text-align: right;
+             float: right;
+             color: #858585;
+         }
+     </style>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AleBlog.Web</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+    <div class="blank">
+        <header>
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar-header">
+                        <a href="/">林阿乐🌝</a>
+                    </div>
+                    <div class="menu navbar-right">
+                        <a class="menu-item" href="javascript:">文章</a>
+                        <a class="menu-item" href="javascript:">~</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+            </nav>
+        </header>
+        @RenderBody()
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - AleBlog.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
 </body>
 </html>
+@RenderSection("Scripts", required: false)
