1、修改了Blog的一些样式，顺便适配了手机端;2、新增了分页系统，后期再做封装整理;3、新增了style.css样式文件，用于全局的样式处理;

--- a/AleBlog.Web/wwwroot/css/site.css
+++ b/AleBlog.Web/wwwroot/css/site.css
@@ -1,71 +1,99 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿body {
+    margin: 0;
+    line-height: 2em;
 }
 
-/* Provide sufficient contrast against white background */
+html {
+    font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+}
+
 a {
-  color: #0366d6;
+    color: #000000;
+    text-decoration: none;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+a:hover {
+    color: #919191;
+    transition: color .2s ease,border-color .2s ease,background .2s ease,opacity .2s ease;
+    text-decoration: none;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.navbar {
+    height: 4rem;
+    line-height: 4rem;
+    width: 100%;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.navbar .container {
+    width: auto;
+    max-width: 1080px;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.main {
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: auto;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+.container {
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+.navbar-header a:hover,
+.navbar .menu a:hover {
+    background-color: transparent;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+/*page*/
+.page-wrap {
+    position: relative;
+    width: 100%;
+    max-width: 780px;
+    margin: 0 auto;
+    padding-top: 1rem;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+
+.article-item-createdt {
+    text-align: right;
+    float: right;
+    color: #858585;
+}
+
+.page-content {
+    padding-top: 2rem;
+    text-align: justify;
+}
+
+
+.page-nav a.prev {
+    float: left;
+}
+
+.page-nav [class |=next] {
+    float: right;
+}
+
+.page-nav a.prev::before {
+    content: "◀"
+}
+
+.page-nav a.next::after {
+    content: "▶";
+}
+
+
+/* phone */
+@media only screen and (max-device-width: 480px) and (min-device-width: 320px) {
+    .pmobile {
+        width: 90%;
+    }
+
+    .article-item-createdt{
+        display:none;
+    }
 }
