--- a/AleBlog.Web/Views/Blog/Page.cshtml
+++ b/AleBlog.Web/Views/Blog/Page.cshtml
@@ -3,16 +3,34 @@
 }
 @section CSS{
     <link rel="stylesheet" href="~/lib/editor.md/css/editormd.preview.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 }
 <div class="main">
     <div class="container">
-        <div class="page-wrap">
+        <article class="page-wrap  pmobile">
             <script id="page_tmpl" type="text/template">
+                <header class="page-header">
+                    <h1 class="page-title">{{@@result.title}}</h1>
+                    <div class="page-meta">
+                        Author: <a href="javascript:;">{{@@result.author}}</a>
+                        <span class="page-time">
+                            Date: <a href="javascript:;">{{@@result.create_Dt_Str}}</a>
+                        </span>
+                    </div>
+                </header>
                 <div class="post-content" id="content">
-                    <textarea style="display:none;">{{@@result.page_content}}</textarea>
+                    <textarea style="display:none;">{{@@result.page_Content}}</textarea>
                 </div>
+                <section class="page-nav">
+                    {{if result.previous }}
+                    <a class="prev" href="/Blog/Page?page_id={{@@result.previous.page_Id}}">{{@@result.previous.title}}</a>
+                    {{/if}}
+                    {{if result.next }}
+                    <a class="next" href="/Blog/Page?page_id={{@@result.next.page_Id}}">{{@@result.next.title}}</a>
+                    {{/if}}
+                </section>
             </script>
-        </div>
+        </article>
     </div>
 </div>
     @section Scripts{
@@ -25,23 +43,11 @@
 
         <script>
 
-
-            var api_domain = "http://localhost:8036";
-            /**
-               * [通过参数名获取url中的参数值]
-               * 示例URL:https://;localhost:80/Home/Page?page_id=71
-               * param  {[string]} queryName [参数名]
-               * return {[string]}           [参数值]
-               */
-            function getQueryVariable(variable) {
-                var query = window.location.search.substring(1);
-                var vars = query.split("&");
-                for (var i = 0; i < vars.length; i++) {
-                    var pair = vars[i].split("=");
-                    if (pair[0] == variable) { return pair[1]; }
-                }
-                return (false);
-            }
+            //dev
+            var api_domain = "http://localhost:5002";
+            //produce
+            //var api_domain = "http://47.95.255.71:7002";
+         
             console.log("page_id:" + getQueryVariable("page_id"));
 
             var page_id = getQueryVariable("page_id");
