--- a/AleBlog.Web/Views/Home/Index.cshtml
+++ b/AleBlog.Web/Views/Home/Index.cshtml
@@ -1,36 +1,123 @@
 ﻿@{
     ViewData["Title"] = "Test";
 }
-    <div id="page-title-tpl" class="page-blank">
+@section CSS{
+    <link rel="stylesheet" href="~/css/site.css" />
+<style>
+    .paging {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        list-style: none;
+        white-space: nowrap;
+        width: 100%;
+    }
+    .paging .pagnum {
+        font-size:20px;
+        padding: 6px 6px;
+    }
+
+</style>
+}
+<div class="main">
+    <div id="page-title-tpl" class="page-wrap pmobile">
         <script id="tpl" type="text/template">
             {{each data}}
             <h3>
                 {{$value.year}}
             </h3>
-                {{each $value.pageTitleDtos}}
-                    <article>
-                        <a href="/Blog/Page?page_id={{$value.page_Id}}">{{$value.page_Title}} </a>
-                        <span class="article-item-createdt">{{$value.create_Dt}}</span>
-                    </article>
-                {{/each}}
+            {{each $value.pageTitleDtos}}
+            <article>
+                <a href="/Blog/Page?page_id={{$value.page_Id}}">{{$value.page_Title}} </a>
+                <span class="article-item-createdt">{{$value.create_Dt}}</span>
+            </article>
+            {{/each}}
             {{/each}}
         </script>
+        <nav class="paging"></nav>
     </div>
-@section Scripts{ 
-<script src="~/js/axios.min.js"></script>
-<script src="~/js/template-web.js"></script>
-<script>
-    var api_domain = "http://localhost:8036";
+    
+</div>
+    @section Scripts{
+        <script src="~/js/axios.min.js"></script>
+        <script src="~/js/template-web.js"></script>
+        <script>
+            //dev
+            var api_domain = "http://localhost:5002";
+            //produce
+            //var api_domain = "http://47.95.255.71:7002";
 
-    axios.get(`${api_domain}/blog/page/querypage?Page=1&Limit=20`,{ withCredentials: true }).then(function (response) {
+            var page = getQueryVariable("page");
+            page = page ? Number(page): 1;
+            var limit = 4;
+            
+            axios.get(`${api_domain}/blog/page/querypage?Page=${page == false ? '1' : page}&Limit=${limit == false ? '4' : limit} `, { withCredentials: true }).then(function (response) {
 
-        if (response.status == '200') {
-            var html = template('tpl', response.data);
-            document.querySelector('#page-title-tpl').innerHTML = html;
-        }
-        else {
-            console.log(response.data.message);
-        }
-    });
-</script>
-}
+                if (response.status == '200') {
+                    var html = template('tpl', response.data);
+                    document.querySelector('#page-title-tpl').insertAdjacentHTML('afterbegin',html);
+
+                    var totalPaging = Math.ceil(response.data.total / limit);
+                    var pagingHtml = "";
+
+                    var InitPageNum = 5;//分页一行显示5页
+
+                   
+
+                   
+
+
+                    var halve = Math.floor(totalPaging / 2);
+                    var mp = Math.floor(InitPageNum / 2); 
+
+                    var pageIndex = 1;
+
+                    if (halve < InitPageNum) {
+                        for (pageIndex = 1; pageIndex <= totalPaging; pageIndex++) {
+                            //当总页数低于页码行数
+                            pagingHtml += page == pageIndex ? `<span class="pagnum curr">${pageIndex}</span>` : `<a class="pagnum" href="?page=${pageIndex}&limit=${limit}">${pageIndex}</a>`;
+                        }
+                    }
+
+                    if (halve >= InitPageNum) {
+                        pagingHtml += page == 1 ? `<span class="pagnum curr">▲</span>` : `<a class="pagnum" href="?page=${page - 1}&limit=${limit}">▲</a>`;
+                        if (page >= 1 && page < InitPageNum) {
+                            for (pageIndex = 1; pageIndex <= InitPageNum; pageIndex++) {
+                                pagingHtml += page == pageIndex ? `<span class="pagnum curr">${pageIndex}</span>` : `<a class="pagnum" href="?page=${pageIndex}&limit=${limit}">${pageIndex}</a>`;
+                            }
+                            pagingHtml += '<span class="pagnum">...</span>';
+                            pagingHtml += `<a class="pagnum" href="?page=${totalPaging}&limit=${limit}">${totalPaging}</a>`;
+                        }
+
+                        if (page >= InitPageNum && page <= totalPaging - InitPageNum) {
+                            pagingHtml += `<a class="pagnum" href="?page=${1}&limit=${limit}">1</a>`;
+                            pagingHtml += '<span class="pagnum">...</span>';
+                            for (pageIndex = (page - mp); pageIndex <= (page + mp); pageIndex++) {
+                                pagingHtml += page == pageIndex ? `<span class="pagnum curr">${pageIndex}</span>` : `<a class="pagnum" href="?page=${pageIndex}&limit=${limit}">${pageIndex}</a>`;
+                            }
+                            pagingHtml += '<span class="pagnum">...</span>';
+                            pagingHtml += `<a class="pagnum" href="?page=${totalPaging}&limit=${limit}">${totalPaging}</a>`;
+                        }
+
+                        if (page <= totalPaging && page > totalPaging - InitPageNum) {
+                            pagingHtml += `<a class="pagnum" href="?page=${1}&limit=${limit}">1</a>`;
+                            pagingHtml += '<span class="pagnum">...</span>';
+                            for (pageIndex = (totalPaging - InitPageNum); pageIndex <= totalPaging; pageIndex++) {
+                                pagingHtml += page == pageIndex ? `<span class="pagnum curr">${pageIndex}</span>` : `<a class="pagnum" href="?page=${pageIndex}&limit=${limit}">${pageIndex}</a>`;
+                            }
+                        }
+                        pagingHtml += page == totalPaging ? `<span class="pagnum curr">▼</span>` : `<a class="pagnum" href="?page=${page - 1}&limit=${limit}">▼</a>`;
+                    }
+
+                
+
+
+
+                    document.querySelector('.paging').innerHTML = pagingHtml;
+                }
+                else {
+                    console.log(response.data.message);
+                }
+            });
+        </script>
+    }
