--- a/AleBlog.Web/Views/Shared/_Layout.cshtml
+++ b/AleBlog.Web/Views/Shared/_Layout.cshtml
@@ -2,78 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     @RenderSection("CSS", required: false)
     <title>@ViewData["Title"] - AleBlog</title>
-    <style>
-        html {
-            font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
-        }
-
-        a {
-            color: #000000;
-            text-decoration: none;
-        }
-
-            a:hover {
-                color: #919191;
-                transition: color .2s ease,border-color .2s ease,background .2s ease,opacity .2s ease;
-                text-decoration: none;
-            }
-
-        .navbar {
-            height: 4rem;
-            line-height: 4rem;
-            width: 100%;
-        }
-
-            .navbar .container {
-                width: auto;
-                max-width: 1080px;
-                text-align: center;
-                margin: 0 auto;
-                display: flex;
-                justify-content: space-between;
-            }
-
-        .main {
-            flex-grow: 1;
-            flex-shrink: 0;
-            flex-basis: auto;
-        }
-
-            .navbar-header a:hover,
-            .navbar .menu a:hover {
-                background-color: transparent;
-            }
-
-        .page-blank {
-            width: 100%;
-            max-width: 900px;
-            margin: 0 auto;
-            padding-top: 2rem;
-        }
-
-        .article-item-createdt {
-            text-align: right;
-            float: right;
-            color: #858585;
-        }
-
-        /*page*/
-        .page-wrap {
-            position: relative;
-            width: 100%;
-            max-width: 780px;
-            margin: 0 auto;
-            padding-top: 2rem;
-        }
-
-        .page-content {
-            padding-top: 2rem;
-            text-align: justify;
-        }
-    </style>
 </head>
 <body>
     <div class="blank">
@@ -94,4 +25,21 @@
     </div>
 </body>
 </html>
+<script>
+    /**
+    * [通过参数名获取url中的参数值]
+    * 示例URL:https://;localhost:80/Home/Page?page_id=71
+    * param  {[string]} queryName [参数名]
+    * return {[string]}           [参数值]
+    */
+    function getQueryVariable(variable) {
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i = 0; i < vars.length; i++) {
+            var pair = vars[i].split("=");
+            if (pair[0] == variable) { return pair[1]; }
+        }
+        return (false);
+    }
+</script>
 @RenderSection("Scripts", required: false)
