--- a/AleBlog.Web/Views/Shared/_Layout.cshtml
+++ b/AleBlog.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="~/css/site.css" />
     @RenderSection("CSS", required: false)
     <title>@ViewData["Title"] - AleBlog</title>
 </head>
@@ -12,6 +13,7 @@
             <nav class="navbar">
                 <div class="container">
                     <div class="navbar-header">
+                        <a id="header-left-btn" title="点击收缩导航栏" style="font-size:10px;">⇱ </a>
                         <a href="/">林阿乐🌝</a>
                     </div>
                     <div class="menu navbar-right">
